# gmail-sender

./: README.md  pyproject.toml  setup.py
src/google_mail/: send_google_mail.py
src/google_mail/__test__/: test_send_google_mail.py
